tests/analyzer/errors/missing_self_method_call.rv
struct Foo {
    fn speak() {}
    fn speak2(a: int) {}
}

fn main() {
    var foo = Foo.{}
    foo.speak()
    foo.speak2()
}
